kubernetes/apps/network/authentik/app/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ak-outpost-authentik-embedded-outpost
  namespace: network
spec:
  tls:
    - hosts:
        - auth.${SECRET_DOMAIN}
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
