kubernetes/apps/network/authentik/app/ingress.yaml
---
# yaml-language-server: $schema: https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ak-outpost-authentik-embedded-outpost
  namespace: network
  labels:
    app.kubernetes.io/instance: authentik-embedded-outpost
    # app.kubernetes.io/managed-by: goauthentik.io
    app.kubernetes.io/name: authentik-proxy
    goauthentik.io/outpost-name: authentik-embedded-outpost
    goauthentik.io/outpost-type: proxy
    goauthentik.io/outpost-version: 2025.2.4
spec:
  ingressClassName: internal
  rules:
    - host: &host auth.${SECRET_DOMAIN}
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-authentik-embedded-outpost
                port:
                  number: 9000
  tls:
    - hosts:
        - *host
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
---
# yaml-language-server: $schema: https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-server
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    gethomepage.dev/app: "authentik"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Authentik"
    gethomepage.dev/description: ""
    gethomepage.dev/href: "https://auth.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Kubernetes"
    gethomepage.dev/icon: "sh-authentik.png"
spec:
  ingressClassName: external
  rules:
    - host: &host auth.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
