kubernetes/apps/network/authentik/app/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "auth.${SECRET_DOMAIN}"
    kubernetes.io/ingress.class: traefik
    gethomepage.dev/app: "authentik"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Authentik"
    gethomepage.dev/description: ""
    gethomepage.dev/href: "https://auth.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Kubernetes"
    gethomepage.dev/icon: "sh-authentik.png"
    # widget broken
    # gethomepage.dev/widget.type: authentik
    # gethomepage.dev/widget.url: "https://auth.${SECRET_DOMAIN}"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`auth.${SECRET_DOMAIN}`)"
      # middlewares:
      #   - name: default-headers
      #   - name: compress-gzip
      services:
        - kind: Service
          name: authentik-server
          port: 80
          scheme: http
          passHostHeader: true
          # sticky:
          #   cookie:
          #     httpOnly: true
          #     secure: true
          #     sameSite: none
  tls:
    secretName: "${SECRET_DOMAIN/./-}-production-tls"
